--- a/gradle.properties
+++ b/gradle.properties
@@ -21,17 +21,18 @@ buildFromSource=true
 # The default version for LabKey artifacts that are built or that we depend on.
 # override in an individual module's gradle.properties file as necessary 
 labkeyVersion=20.3-SNAPSHOT
+labkeyClientApiVersion=1.0.0
 
 # The current version numbers for the gradle plugins.
 bintrayPluginVersion=1.8.4
 artifactoryPluginVersion=4.13.0
 gradleNodePluginVersion=2.0.0
-gradlePluginsVersion=1.9.2
+gradlePluginsVersion=1.10.0
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.0.2
 
 # Versions of node and npm to use during the build.  If set, these versions
-# will be downloaded and used.  If not set, the existing local installations will be used.
+# will be downloaded and used.  If not set, the existing local installations will be use
 # The version of npm corresponds to the given version of node
 npmVersion=6.9.0
 nodeVersion=10.16.0
