Gradle plugins version 1.10.1
SVN r65182 |2020-02-27 19:14:10 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,18 @@
 #moduleSet=all
 #moduleSet=consolidation
 #ideaIncludeAllModules=true
+# comment out or use --no-parallal to turn off parallel execution
 #org.gradle.parallel=true
+# comment out and Gradle will attempt to determine the optimal number of executor threads to use
+# (this could be memory-intensive)
+#org.gradle.workers.max=3
+# Default to using 2GB of memory for the JVM.
+#org.gradle.jvmargs=-Xmx2048m
+
+# Set the action to be performed when a version conflict between an artifact that is being built and one that already exists
+# is detected.  Default behavior on detecting a conflict is to fail.  Possible values are delete, fail, warn.  
+# The value 'delete' will cause the conflicting version(s) in the build directory to be removed. 
+#versionConflictAction=delete
 
 # the URL for the artifact repository where our build plugins are housed
 # as well as the build artifacts. (Be careful not to include a trailing slash 
@@ -27,7 +38,7 @@ labkeyClientApiVersion=1.0.0
 bintrayPluginVersion=1.8.4
 artifactoryPluginVersion=4.13.0
 gradleNodePluginVersion=2.0.0
-gradlePluginsVersion=1.10.0
+gradlePluginsVersion=1.10.1
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.0.2
 
