--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 #moduleSet=consolidation
 #ideaIncludeAllModules=true
 # comment out or use --no-parallal to turn off parallel execution
-#org.gradle.parallel=true
+org.gradle.parallel=true
 # comment out and Gradle will attempt to determine the optimal number of executor threads to use
 # (this could be memory-intensive)
-#org.gradle.workers.max=3
+org.gradle.workers.max=3
 # Default to using 2GB of memory for the JVM.
-#org.gradle.jvmargs=-Xmx2048m
+org.gradle.jvmargs=-Xmx2048m
 
-# Set the action to be performed when a version conflict between an artifact that is being built and one that already exists
+# Set the action to be performed when a version conflict between a dependency included from the  build and one that already exists
 # is detected.  Default behavior on detecting a conflict is to fail.  Possible values are delete, fail, warn.  
-# The value 'delete' will cause the conflicting version(s) in the build directory to be removed. 
-#versionConflictAction=delete
+# The value 'delete' will cause the conflicting version(s) in the build directory to be removed.
+versionConflictAction=delete
 
 # the URL for the artifact repository where our build plugins are housed
 # as well as the build artifacts. (Be careful not to include a trailing slash 
