Upgrade Jakarta Mail 1.6.4 -> 1.6.5
SVN r65226 |2020-03-12 16:09:17 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #moduleSet=all
 #moduleSet=consolidation
 #ideaIncludeAllModules=true
-# comment out or use --no-parallal to turn off parallel execution
+# comment out or use --no-parallel to turn off parallel execution
 org.gradle.parallel=true
 # comment out and Gradle will attempt to determine the optimal number of executor threads to use
 # (this could be memory-intensive)
@@ -154,7 +154,7 @@ jamaVersion=1.0.2
 
 javassistVersion=3.20.0-GA
 
-javaMailVersion=1.6.4
+javaMailVersion=1.6.5
 
 # No longer part of Java 10. Dependency for NIHS and OpenEMPI.
 jaxbVersion=2.3.0
