Comments are good
SVN r65262 |2020-03-18 22:17:14 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,7 @@ if (tomcatDirProp != null && !new File(tomcatDirProp).exists())
 
 apply plugin: 'org.labkey.multiGit'
 allprojects {
+    // this configuration is needed only in server and testAutomation, but we leave it here (for now) to avoid duplication
     configurations {
         driver
     }
