First hacking to get upgraded to Log4J 2.13.1
SVN r65350 |2020-04-13 02:31:20 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -162,7 +162,7 @@ allprojects {
                     force "org.slf4j:slf4j-api:${slf4jLog4jApiVersion}"
                     // force some newer versions than are brought in by mondrian (et al.)
                     force "xerces:xercesImpl:${xercesImplVersion}"
-                    force "log4j:log4j:${log4jVersion}"
+                    force "org.apache.logging.log4j:log4j-core:${log4jVersion}"
                     // force version for consistency with saml, query, LDK, and pipeline
                     force "commons-lang:commons-lang:${commonsLangVersion}"
                     // force version for consistency with workflow, api, SequenceAnalysis
