Add parameters for sas API adn jdbc api projects
SVN r65367 |2020-04-16 21:43:11 +0000

--- a/gradle/settings/parameters.gradle
+++ b/gradle/settings/parameters.gradle
@@ -6,6 +6,8 @@ gradle.ext.apiProjectPath=":server:modules:platform:api"
 gradle.ext.bootstrapProjectPath=":server:bootstrap"
 gradle.ext.internalProjectPath=":server:modules:platform:internal"
 gradle.ext.remoteApiProjectPath=":remoteapi:java"
+gradle.ext.sasApiProjectPath=":remoteapi:sas"
+gradle.ext.jdbcApiProjectPath=":remoteapi:labkey-api-jdbc"
 gradle.ext.schemasProjectPath=":server:modules:platform:api"
 gradle.ext.testProjectPath=":server:testAutomation"
 gradle.ext.nodeBinProjectPath=":" // The npm and node executables downloaded into this project's build directory will be the target of the links created by the synlinkNode task
