--- a/gradle/settings/all.gradle
+++ b/gradle/settings/all.gradle
@@ -52,3 +52,7 @@ if (new File(getRootDir(), "remoteapi/labkey-api-jdbc").exists())
 {
     include ":remoteapi:labkey-api-jdbc"
 }
+// TODO use this instead of the above after gradlePlugins 1.11.0 is released
+//include BuildUtils.getJdbcApiProjectPath(gradle)
+// include remoteapi if present as well
+include BuildUtils.getRemoteApiProjectPath(gradle)
