Only include remoteapi project for building distributions
SVN r65382 |2020-04-22 14:30:17 +0000

--- a/gradle/settings/distributions.gradle
+++ b/gradle/settings/distributions.gradle
@@ -26,4 +26,5 @@ apply from: 'all.gradle'
 
 BuildUtils.includeModules(this.settings, rootDir, ["distributions"], [])
 
+include BuildUtils.getRemoteApiProjectPath(gradle)
 include BuildUtils.getSasApiProjectPath(gradle)
