--- a/gradle/settings/parameters.gradle
+++ b/gradle/settings/parameters.gradle
@@ -5,8 +5,8 @@ gradle.ext.commonAssaysProjectPath=":server:modules:commonAssays" // The gradle 
 gradle.ext.apiProjectPath=":server:modules:platform:api"
 gradle.ext.bootstrapProjectPath=":server:bootstrap"
 gradle.ext.internalProjectPath=":server:modules:platform:internal"
-gradle.ext.remoteApiProjectPath=":remoteapi:java"
-gradle.ext.sasApiProjectPath=":remoteapi:sas"
+gradle.ext.remoteApiProjectPath=":remoteapi:labkey-api-java:java"
+gradle.ext.sasApiProjectPath=":remoteapi:labkey-api-java:sas"
 gradle.ext.jdbcApiProjectPath=":remoteapi:labkey-api-jdbc"
 gradle.ext.schemasProjectPath=":server:modules:platform:api"
 gradle.ext.testProjectPath=":server:testAutomation"
