Don't include API projects if they aren't present
SVN r65384 |2020-04-22 17:44:17 +0000

--- a/gradle/settings/all.gradle
+++ b/gradle/settings/all.gradle
@@ -47,5 +47,17 @@ BuildUtils.includeModules(this.settings, rootDir, ["server/modules", "server/opt
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
 include "${BuildUtils.getTestProjectPath(this.settings.gradle)}:distributions:teamcity"
 
-// include the jdbc api for testing on TeamCity.
-include BuildUtils.getJdbcApiProjectPath(gradle)
+if (new File(getRootDir(), BuildUtils.convertPathToRelativeDir(BuildUtils.getJdbcApiProjectPath(gradle))).exists())
+{
+    include BuildUtils.getJdbcApiProjectPath(gradle)
+}
+
+if (new File(getRootDir(), BuildUtils.convertPathToRelativeDir(BuildUtils.getRemoteApiProjectPath(gradle))).exists())
+{
+    include BuildUtils.getRemoteApiProjectPath(gradle)
+}
+
+if (new File(getRootDir(), BuildUtils.convertPathToRelativeDir(BuildUtils.getSasApiProjectPath(gradle))).exists())
+{
+    include BuildUtils.getSasApiProjectPath(gradle)
+}
