Prepare for move of all modules to server/modules
SVN r65455 |2020-05-11 18:44:05 +0000

--- a/server/modules/build.gradle
+++ b/server/modules/build.gradle
@@ -6,7 +6,8 @@ subprojects {
     if (p.projectDir.exists() && 
             ModuleFinder.isPotentialModule(p) && 
             !p.path.equals(BuildUtils.getApiProjectPath(p.gradle)) && 
-            !p.path.equals(BuildUtils.getInternalProjectPath(p.gradle))
+            !p.path.equals(BuildUtils.getInternalProjectPath(p.gradle)) &&
+            !p.path.startsWith(":server:modules:wnprc-modules")
     )
     {
       apply plugin: 'java'
