--- a/gradle/settings/premium.gradle
+++ b/gradle/settings/premium.gradle
@@ -21,7 +21,7 @@ buildscript {
 }
 import org.labkey.gradle.util.BuildUtils
 
-// Inclues all modules in the server/modules and server/optionalModules directories
+// Inclues all modules in the server/modules and server/modules directories
 BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR, BuildUtils.OPTIONAL_MODULES_DIR], [], true)
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
