--- a/settings.gradle
+++ b/settings.gradle
@@ -81,8 +81,8 @@ else
     // Items may be individual module names (e.g. 'luminex') or module container names (e.g. 'customModules')
     List<String> excludedModules = []
 
-    // The line below recursively includes all modules in server/modules and server/optionalModules
-    BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR, BuildUtils.OPTIONAL_MODULES_DIR], excludedModules, true)
+    // The line below recursively includes all modules in server/modules and server/modules
+    BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR], excludedModules, true)
 
     // The line below includes all modules in server/modules, server/modules/platform, and server/modules/commonAssays, but not other module containers (e.g. server/modules/customModules)
     //BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR, BuildUtils.PLATFORM_MODULES_DIR, BuildUtils.COMMON_ASSAYS_MODULES_DIR], excludedModules)
@@ -93,7 +93,7 @@ else
     // The line below includes all modules in the server/modules/customModules directory
     //BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.CUSTOM_MODULES_GIT_DIR], excludedModules)
 
-    // The line below includes all modules in the server/modules, server/modules/platform, server/modules/commonAssays, server/modules/customModules and server/optionalModules directories
+    // The line below includes all modules in the server/modules, server/modules/platform, server/modules/commonAssays, and server/modules/customModules directories
     //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules)
 
     // Example excluded external modules for an EHR build
@@ -103,12 +103,12 @@ else
     //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EXTERNAL_MODULES_DIR, excludedExternalModules)
 
     // The line below includes a set of individual modules (in this case, some EHR related modules)
-    //BuildUtils.includeModules(this.settings, [":server:optionalModules:tnprc_ehr",
-    //                                         ":server:optionalModules:tnprc_billing",
-    //                                         ":server:optionalModules:snd"])
+    //BuildUtils.includeModules(this.settings, [":server:modules:tnprc_ehr",
+    //                                         ":server:modules:tnprc_billing",
+    //                                         ":server:modules:snd"])
 
     // The line below is an example of how to include a single module
-    //include ":server:optionalModules:workflow"
+    //include ":server:modules:workflow"
 }
 
 if (hasProperty('extraIncludes'))
