--- a/gradle.properties
+++ b/gradle.properties
@@ -126,6 +126,8 @@ googleApiClientVersion=1.23.0
 googleHttpClientVersion=1.23.0
 googleOauthClientVersion=1.23.0
 
+graalVersion=20.0.0
+
 # Cloud and SequenceAnalysis bring gson in as a transitive dependency.
 # We resolve to the later version here to keep things consistent
 gsonVersion=2.2.4
