--- a/gradle.properties
+++ b/gradle.properties
@@ -79,8 +79,10 @@ apacheDirectoryVersion=1.0.3
 #Transitive dependency of Apache directory: 2.0.18 contains some regressions
 apacheMinaVersion=2.0.19
 
-# sync with version Tika ships. also used by jclouds->guice->cglib.
-asmVersion=5.0.4
+# (mothership) -> json-path -> json-smart -> accessor-smart
+# (core) -> graalvm
+# tika???
+asmVersion=7.1
 
 # Apache Batik -- Batik version is dictated by Apache FOP, but we need to pull in batik-codec separately
 batikVersion=1.10
