Don't include base or test modules if they don't exist
SVN r65598 |2020-06-16 22:53:51 +0000

--- a/settings.gradle
+++ b/settings.gradle
@@ -45,9 +45,15 @@ import org.labkey.gradle.util.BuildUtils
  */
 
 // The line below includes the set of modules for a minimally functional LabKey server
-BuildUtils.includeBaseModules(this.settings)
+if (new File(getRootDir(), BuildUtils.convertPathToRelativeDir(BuildUtils.getPlatformProjectPath(gradle))).exists())
+{
+    BuildUtils.includeBaseModules(this.settings)
+}
 // The line below will include the server/test project as well as the server/test/modules projects
-BuildUtils.includeTestModules(this.settings, rootDir)
+if (new File(getRootDir(), BuildUtils.convertPathToRelativeDir(BuildUtils.getTestProjectPath(gradle))).exists())
+{
+    BuildUtils.includeTestModules(this.settings, rootDir)
+}
 
 if (hasProperty("ideaIncludeAllModules") && BuildUtils.isIntellijGradleRefresh(this))
 {
