--- a/gradle/settings/premium.gradle
+++ b/gradle/settings/premium.gradle
@@ -1,34 +1,2 @@
-buildscript {
-    repositories {
-        maven {
-            url "${artifactory_contextUrl}/plugins-release"
-        }
-        if (gradlePluginsVersion.contains("SNAPSHOT"))
-        {
-            maven {
-                url "${artifactory_contextUrl}/plugins-snapshot-local"
-            }
-
-        }
-    }
-    dependencies {
-        classpath "org.labkey.build:gradlePlugins:${gradlePluginsVersion}"
-    }
-    configurations.all {
-        // Check for updates every build for SNAPSHOT dependencies
-        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-    }
-}
-import org.labkey.gradle.util.BuildUtils
-
-// Inclues all modules in the server/modules directories
-BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR], [], true)
-
-// include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
-include "${BuildUtils.getTestProjectPath(this.settings.gradle)}:distributions:teamcity"
-
-// include the jdbc api for testing on TeamCity.
-if (new File(getRootDir(), "remoteapi/labkey-api-jdbc").exists())
-{
-    include ":remoteapi:labkey-api-jdbc"
-}
+// Deprecated. All modules live in 'server/modules'
+apply from: 'all.gradle'
