--- a/gradle.properties
+++ b/gradle.properties
@@ -33,12 +33,18 @@ buildFromSource=true
 # override in an individual module's gradle.properties file as necessary 
 labkeyVersion=20.7-SNAPSHOT
 labkeyClientApiVersion=1.3.0
+# Version numbers for the various binary artifacts that are included when
+# deploying via deployApp or deployDist and when creating distributions.
+windowsUtilsVersion=1.0
+linuxProteomicsBinariesVersion=1.0
+osxProteomicsBinariesVersion=1.0
+windowsProteomicsBinariesVersion=1.0
 
 # The current version numbers for the gradle plugins.
 bintrayPluginVersion=1.8.4
 artifactoryPluginVersion=4.13.0
 gradleNodePluginVersion=2.2.4
-gradlePluginsVersion=1.12.2
+gradlePluginsVersion=1.13.0
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.0.2
 
