--- a/server/build.gradle
+++ b/server/build.gradle
@@ -4,6 +4,7 @@ import org.labkey.gradle.util.GroupNames
 import org.labkey.gradle.util.PomFileHelper
 import org.labkey.gradle.plugin.XsdDoc
 import org.labkey.gradle.plugin.JsDoc
+import org.apache.commons.lang3.SystemUtils
 
 BuildUtils.addLabKeyDependency(project: project, config: 'tomcatJars', depProjectPath: BuildUtils.getBootstrapProjectPath(gradle))
 dependencies
@@ -24,6 +25,29 @@ dependencies
    xsdDoc "xml-apis:xml-apis:${xmlApisVersion}"
    xsdDoc "xerces:xercesImpl:${xercesImplVersion}"
    xsdDoc "docflex:docflex-xml-re:${docflexXmlReVersion}"
+}
+
+
+configurations
+        {
+            binaries.extendsFrom(utilities)
+        }
+configurations.binaries.setDescription("Utility and proteomics binaries")
+
+if (!project.hasProperty('excludeProteomicsBinaries'))
+{
+    dependencies
+    {
+        if (SystemUtils.IS_OS_LINUX) {
+            binaries "org.labkey.tools.linux:proteomicsBinaries:${linuxProteomicsBinariesVersion}@zip"
+        }
+        else if (SystemUtils.IS_OS_MAC) {
+            binaries "org.labkey.tools.osx:proteomicsBinaries:${osxProteomicsBinariesVersion}@zip"
+        }
+        else if (SystemUtils.IS_OS_WINDOWS) {
+            binaries "org.labkey.tools.windows:proteomicsBinaries:${windowsProteomicsBinariesVersion}@zip"
+        }
+    }
 }
 
 apply plugin: 'org.labkey.tomcat'
