--- a/build.gradle
+++ b/build.gradle
@@ -168,6 +168,9 @@ allprojects {
                     // force some newer versions than are brought in by mondrian (et al.)
                     force "xerces:xercesImpl:${xercesImplVersion}"
                     force "log4j:log4j:${log4jVersion}"
+                    force "org.apache.logging.log4j:log4j-core:2.13.3"
+                    force "org.apache.logging.log4j:log4j-api:2.13.3"
+                    force "org.apache.logging.log4j:log4j-1.2-api:2.13.3"
                     // force version for consistency with saml, query, LDK, and pipeline
                     force "commons-lang:commons-lang:${commonsLangVersion}"
                     // force version for consistency with workflow, api, SequenceAnalysis
