--- a/build.gradle
+++ b/build.gradle
@@ -167,10 +167,9 @@ allprojects {
                     force "org.slf4j:slf4j-api:${slf4jLog4jApiVersion}"
                     // force some newer versions than are brought in by mondrian (et al.)
                     force "xerces:xercesImpl:${xercesImplVersion}"
-                    force "log4j:log4j:${log4jVersion}"
-                    force "org.apache.logging.log4j:log4j-core:2.13.3"
-                    force "org.apache.logging.log4j:log4j-api:2.13.3"
-                    force "org.apache.logging.log4j:log4j-1.2-api:2.13.3"
+                    force "org.apache.logging.log4j:log4j-core:${log4j2Version}"
+                    force "org.apache.logging.log4j:log4j-api:${log4j2Version}"
+                    force "org.apache.logging.log4j:log4j-1.2-api:${log4j2Version}"
                     // force version for consistency with saml, query, LDK, and pipeline
                     force "commons-lang:commons-lang:${commonsLangVersion}"
                     // force version for consistency with workflow, api, SequenceAnalysis
