Copy jspWriter.jspf from server/modules/platform/api/webapp/WEB-INF to build/webapp/WEB-INF
SVN r65869 |2020-09-15 23:32:44 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -319,6 +319,7 @@ project.task("copyTagLibsBase",
             copy.into "${project.buildDir}/webapp"
             copy.include 'WEB-INF/web.xml'
             copy.include 'WEB-INF/*.tld'
+            copy.include 'WEB-INF/*.jspf'
             copy.include 'WEB-INF/tags/**'
         }
 )
